# RenderingAbstraction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
include/: Base.hpp  Buffer.hpp  Camera.hpp  Cubemap.hpp  Framebuffer.hpp  Lights.hpp  Material.hpp  Mesh.hpp  MeshImpl.hpp  RenderAbstraction.hpp  RenderCommand.hpp  Renderer.hpp  Renderer2D.hpp  Renderer3D.hpp  RendererAPI.hpp  RendererSharedState.hpp  RendererSharedStructs.hpp  RenderingContext.hpp  ResourceManager.hpp  Shader.hpp  ShaderUserData.hpp  Skybox.hpp  Stopwatch.hpp  SubMesh.hpp  Texture.hpp  VertexArray.hpp  Window.hpp  rapch.h
include/OpenGL/: OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLCubemap.hpp  OpenGLFramebuffer.hpp  OpenGLRenderer.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLVertexArray.hpp
meshes/: Vector.fbx
src/: Base.cpp  Buffer.cpp  Camera.cpp  Cubemap.cpp  Framebuffer.cpp  Material.cpp  Mesh.cpp  MeshImpl.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  Renderer3D.cpp  RendererAPI.cpp  RenderingContext.cpp  ResourceManager.cpp  Shader.cpp  Skybox.cpp  SubMesh.cpp  Texture.cpp  VertexArray.cpp  Window.cpp
src/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLCubemap.cpp  OpenGLFramebuffer.cpp  OpenGLRenderer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
src/shaders/: blinn-phong.frag  blinn-phong.vert  depth.vert  phong.frag  quad.frag  quad.vert  skybox.frag  skybox.vert  solid_color.frag  solid_color.vert
